# own_classes

./: CMakeLists.txt  README.md
Data_time/: data_time.cpp  data_time.h  main_data_time.cpp
adam_time/: Adam_time.cpp  Adam_time.h  main_Adam_time.cpp
new_integer/: main_new_integer.cpp  new_integer.cpp  new_integer.h
spare_matrix/: main_spare_matrix.cpp  spare_matrix.cpp  spare_matrix.h
